<resources>
    <string name="app_name">Bluetooth Test</string>
    <string name="connectButton">接続開始</string>
    <string name="pairCheckButton">ペアリングチェック</string>
    <string name="mainActivityTitle">Bluetooth Test</string>
    <string name="workText">Dummy Text</string>
    <string name="releaseButton">接続解除</string>
    <string name="writeButton">送信</string>
    <string name="writeHint">メッセージを入力してください</string>
    <string name="clearButton">テキストクリア</string>
    <string name="searchButton">デバイス検索</string>
    <string name="nonDevice">未接続：</string>
    <string name="bluetoothListButton">bluetoothListButton</string>
    <string name="headset">headset</string>
    <string name="profileTitle">Profile Test</string>
    <string name="deviceText">デバイス名：</string>
    <string name="stateCheck">状態チェック</string>
    <string name="connectText">接続開始</string>
    <string name="disconnectText">接続解除</string>
    <string name="a2dp_status_check">A2DP Status Check</string>
    <string name="pausebutton">pauseButton</string>
    <string name="stopbutton">stopButton</string>
    <string name="playbutton">playButton</string>
    <string name="headsetprofile">headsetProfile:</string>
    <string name="a2dpprofile">a2dpProfile:</string>
    <string name="nonCheck">未確認</string>
</resources>